namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd

---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
