deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: flask-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python 
    spec:
      containers:
        - name: flask-webapp 
          image: devopsacrq0khg.azurecr.io/flaskwebapp:6
          resources: {} 
          ports:
            - containerPort: 5000
