service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: python-svc
spec:
  type: ClusterIP 
  selector:
    app: python 
  ports:
    - port: 5000
      targetPort: 5000
