ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: monitoring  
spec:
  rules:
    - host: graph.kubeprithvi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port: 
                  number: 80
  tls:
  - hosts:
    - graph.kubeprithvi.com
    secretName: graph-secret
